# PC-Alarm

./: .gitignore  Makefile  README.md  custom.py  main.py  main.spec  pyproject.toml  requirements.txt  settings.py  settings.toml  test.py
app/: exceptions.py  settings.py
app/bot/: __init__.py  app.py  enums.py  events.py  executors.py  keyboards.py  keys.py  middlewares.py  pages.py  permissions.py  router.py  sender.py  types.py
app/configurator/: app.py  ui.py
app/database/: __init__.py  authenticator.py  connection.py  limits.py  models.py  state.py
app/exceptions/: bot.py
app/utils/: cls.py  event.py  filesystem.py  import_utils.py  json.py  logging.py  string.py  threads.py  translator.py
app/utils/config/: __init__.py  config.py  env.py  json.py  py.py
config/: config.json
docs/db/: EDR_v0.0.2.pgerd
resources/categories/: admin.json  anonymous.json  banned.json  owner.json
resources/db/: main.db
resources/designs/: configurator_design.ui
resources/docs/: POEDIT.MD
resources/i18n/: PC-Alarm.po
resources/languages/: English.json  Ukrainian.json
resources/languages/en/: .lang
resources/languages/uk/: .lang
resources/setup/: inno-setup-script.iss
scripts/: build.bat  build.sh  extrans.bat  extrans.py  ui2py.bat
src/: __main__.py  app.py  factories.py  settings.py  settings.toml  types.py
src/bot/: __init__.py  app.py
src/configurator/: __init__.py  app.py  controls.py  enums.py  factories.py  types.py
src/configurator/gui/: __init__.py  controls.py  enums.py  gui.py
src/core/: enums.py  languages.py  schemas.py  utils.py
src/core/arguments/: arguments.py  schemas.py
src/core/database/: constants.py  models.py
src/core/logging/: __init__.py  logger.py
src/core/settings/: schemas.py
src/utils/di/: types.py  (+1 more)
tests/resources/: test.toml
tests/utils/: test_arguments.py  test_argutils.py  test_clsutils.py  test_funcutils.py  test_i18n.py  test_imputils.py
(+38 files in other folders)
