[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv"
]

[tool.poetry]
name = "pc-alarm"
version = "0.0.2"
description = "PC-Alarm is a tool for remote access to your computer, with alarm function."
authors = ["CrazyProger1 <crazyproger1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
aiogram = "^3.3.0"
peewee = "^3.17.1"
flet = "^0.19.0"
typeguard = "^4.1.5"
pydantic-settings = "^2.1.0"
toml = "^0.10.2"
colorlog = "^6.8.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
mypy = "^1.8.0"
pytest = "^8.0.0"
pyinstaller = "^6.3.0"
colorlog = "^6.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
